# Drug-Discovery-Pipeline-V2

./: .gitignore  Readme.md  file_structure.txt  makefile
.github/workflows/: deploy.yml
agents/: docking_evaluator.py  hypothesis.py  molecule_designer.py  planner.py  report_compiler.py  synthesis_evaluator.py
docker/: docker-compose.yml
docs/: index.html
docs/assets/: site.webmanifest
schemas/: docking.py  hypothesis.py  molecule.py  planner.py  retriever.py
scripts/: check_ollama.py  clear_vectorstore.py
src/: .env.example  config.py  main.py  pyproject.toml  requirements.txt
src/agents/: __init__.py  old_retriever.py  retriever.py
src/docker/: Dockerfile
src/schemas/: __init__.py  report.py
src/tests/: conftest.py
src/tests/test_utils/: test_json_validator.py
src/tools/: __init__.py  docking.py  literature_search.py  synthesis_checker.py
src/utils/: __init__.py  context_manager.py  json_validator.py  ollama_client.py  prompts.py
tests/test_schemas/: test_hypothesis.py
tests/test_tools/: test_molecule_generator.py
tools/: molecule_generator.py  patent_search.py  target_lookup.py
utils/: helpers.py
